--- a/festival_hsu/static/css/about.css
+++ b/festival_hsu/static/css/about.css
@@ -1,87 +1,7 @@
-html {
-    margin: 0px;
-
-    /*배경색깔*/
-    background: rgb(227,201,166);
-}
-
-body {
-    width: 390px;
-    height: 214vw;
-    margin: 0px;
-    display: flex;
-    justify-content: center;
-
-    /*배경색깔*/
-    background: linear-gradient(0deg, rgba(227,201,166,1) 0%, rgba(65,67,87,1) 76%, rgba(2,11,27,1) 96%);
-}
-hr {
-    width: 250px;
-    height: 1px;
-    background-color: white;
-}
-
-
-
-.main {
-    width: 390px;
-    height: 100%;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.topbox {
-    width: 100%;
-    margin-bottom: 10vw;
-    color: white;
-}
-
-.동그라미 {
-    font-size: 18px;
-    margin: 20px;
-    font-family: "Gmarket";
-    color: #ffffff;
-}
-.한서대대동제-outbox {
-    display: flex;
-    justify-content: center;
-    margin-top: 46px;
-}
-.한서대대동제 {
-    font-size: 40px;
-    font-family: "ulsanjunggu";
-}
-.ABOUT {
-    color: #ffffff;
-    font-size: 27px;
-    font-weight: 900;
-    margin: 15px;
-    padding: 7px 40px 7px 40px;
-    width: 400px;
-    height: 50px; 
-    border: 3px solid rgb(255, 255, 255);
-    border-radius: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.midbox {
-    width: 95%;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .end {
-    font-family: "Gmarket";
     font-size: 20px;
     margin-top: 35px;
     margin-bottom: 15px;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .profil {
     width: 160px;
@@ -89,11 +9,8 @@ hr {
     margin: 4px;
     padding: 13px;
     border-radius: 10px;
-    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
     /*배경색깔*/
     background: linear-gradient(0deg, rgba(255,255,255,0.5) 63%, rgba(255,255,255,0.5) 61%, rgba(255,255,255,0.5) 93%);
 }
@@ -106,11 +23,8 @@ hr {
     scroll-snap-type: y mandatory;
 }
 .profil-box {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    scroll-snap-align: center;
 }
 .extra-imf{
     color: #ffffff;
@@ -127,13 +41,12 @@ hr {
 .major {
     margin: 10px;
     font-size: 10px;
-    color: #DA6953;
 }
 .박대영 {
     padding-left: 19px;
     padding-top: 5px;
 }
-.이다빈 {
+.김다빈 {
     padding-right: 8px;
 }
 .P_name {
@@ -143,4 +56,9 @@ hr {
 .H_name {
     padding-bottom: 3px;
     margin-bottom: 7px;
+}
+
+.footerWrap {
+    text-align: center;
+    margin-top: 30px;
 }
