--- a/festival_hsu/static/css/booth.css
+++ b/festival_hsu/static/css/booth.css
@@ -2,151 +2,26 @@
     box-sizing: border-box;
 }
 
-
 html{
     width: 100%;
     overflow-x: hidden;
     height: 100%;
     margin: 0px;
-    /* background: linear-gradient(180deg, #05011C 0%, #FDF7E5 100%); */
 }
 
-
-.noite {
-    background: -webkit-linear-gradient(top, rgb(0, 0, 0) 50%, rgb(45, 34, 71)80%, rgb(42, 31, 62));
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    /*     overflow: hidden; */
-}
-.constelacao {
-    /* position: absolute; */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    animation: rotate 600s infinite linear;
-}
-.lua {
-    position: absolute;
-    right: -50px;
-    top: -50px;
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
-    box-shadow: 0 0 160px 0px #fff, 0 0 30px -4px #fff, 0 0 8px 2px rgba(255, 255, 255, 0.26);
-    background-color: #fff;
-    animation-name: lua;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-duration: 10s;
-}
-
-.lua .textura {
-    background-image: url(https://raw.githubusercontent.com/interaminense/starry-sky/master/src/img/bgMoon.png);
-    background-position: center;
-    background-size: 100%;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 50%;
-    overflow: hidden;
-    opacity: 0.4;
-}
-
-body{
-    background-attachment: fixed;
-    width: 100%;
-    height: 100%;
-    /* background: rgb(227,201,166);
-    background: linear-gradient(0deg, rgba(227,201,166,1) 0%, rgba(65,67,87,1) 76%, rgba(2,11,27,1) 96%); */
-    /* background: linear-gradient(180deg, #05011C 0%, #FDF7E5 100%); */
-    margin: 0px;
-    display: flex;
-    justify-content: center;
-    overflow-x: hidden;
-}
 hr{
-    width: 10vw;
-    height: 1px;
-    background-color: white;
+    width: 22%
 }
 
-/* @font-face {
-    font-family: "ulsanjunggu";
-    src: url("/festival_hsu/thumbs_up/static/ulsanjunggu.ttf") format("truetype");
-    font-weight: normal;
-} */
-
-.main{
-    width: 100vw;
-    /* height: 90vw; */
-    /* margin: 3vw; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.topbox{
-    width: 100vw;
-    margin-bottom: 5vw;
-    color: white;
-}
-
-.동그라미{
-    width: 90vw;
-    margin: 2vw;
-    font-family: "ulsanjunggu";
-    color: rgba(185, 185, 185, 0.452);
-}
-.한서대대동제-outbox{
-    display: flex;
-    justify-content: center;
-    margin-top: 10vw;
-}
-.한서대대동제{
-    font-size: 8vw;
-    font-family: "ulsanjunggu";
-
-}
-.boothinfo{
-    color: white;
-    font-size: 6vw;
-    font-weight: 900;
-
-    width: 74vw;
-    height: 13vw;
-    
-    border: 3px solid rgb(255, 255, 255);
-    border-radius: 50%;
-
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-}
-
-.midbox{
-    width: 90vw;
-    /* height: 80px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .map{
     width: 90vw;
-    /* height: 30vw; */
     margin-top: 6vw;
-    display: flex;
-    justify-content: center;
     align-items: center;
 }
+
 .hanseo_map{
     width: 70vw;
-    height: 30vw;
+    height: 49vw;
     border: 1px solid black;
     z-index: 1;
 }
@@ -160,11 +35,9 @@ hr{
     height: 2vw;
 }
 
-
-
-.bottombox{
+.boothContainer{
     width: 90vw;
-    /* height: 90vw; */
+    height: 41vh;
     margin-top: 5vw;
     display: flex;
     flex-direction: column;
@@ -173,22 +46,18 @@ hr{
 
 .booth_outbox{
     display: flex;
-    width: 94vw;
-    height: 25vw;
-    
-    margin-top: 1vw ;
-    margin-bottom: 1vw ;
-
+    height: 97px;
+    margin-bottom: 15px ;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.65);
 }
 
 .booth_image{
     width: 25vw;
-    height: 22vw;
+    min-width: 92px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.479);   
-    display: flex;
-    justify-content: center;
+    background-color: rgba(255, 255, 255);   
     align-items: center;
     
 }
@@ -197,12 +66,12 @@ hr{
 }
 
 .booth{
-    width: 80vw;
+    width: 75vw;
+    max-width: 259px;
     height: 22vw;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: rgba(177, 177, 177, 0.651);
+    border-radius: 10px;
     text-decoration: none;
+    position: relative;
 }
 .booth_name a{
     text-decoration-line: none;
@@ -212,91 +81,56 @@ hr{
 .heart{
     display: flex;
     justify-content: end;
-    
+    margin-left: 3px;
 }
+
 .place{
-    /* color: rgba(255, 0, 76, 0.377); */
-    color: #DA6953;
     font-size: 2.7vw;
-    margin-left: 1vw;
     font-weight: 900;
     display: flex;
     align-items: center;
-    font-family: "Gmarket2";
 }
 .booth_name{
-    /* color: rgb(65, 24, 99); */
     color: #1D0041;
-    font-size: 4.5vw;
+    font-size: 18px;
     font-weight: 1000;
     text-decoration: none;
-    margin-left: 1vw;
     font-family: "Gmarket";
+    margin: 5px 0px;
 }
 
 .introduce{
     color: #1D004180;
-
-    /* color: rgba(2, 2, 2, 0.973); */
     font-size: 3vw;
     font-weight: 600;
-    margin-left: 1vw;
-    margin-top: 2vw;
     font-family: "Gmarket2";
 }
+
 .heart_outbox{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     font-size: 3vw;
-    
+    position: relative;
+    top: 5px;
+    right: 5px;
 }
-
-
-
 
 .heart {
-    width: 6vw;
-    height: 6vw;
-    margin: 1vw;
-    background-color: rgb(75, 75, 75);
-    position: relative;
-    transform: rotate(-45deg) scale(0.5);
     cursor: pointer;
+    border: none;
+    background: none;
 }
 
-.heart::before {
-    content: '';
-    width: 6vw;
-    height: 6vw;
-    background-color: rgb(75, 75, 75);
-    border-radius: 50%;
-    position: absolute;
+.heartIcon {
+    width: 16px;
+    height: 15px;
 }
 
-.heart::after {
-    content: '';
-    width: 6vw;
-    height: 6vw;
-    background-color: rgb(75, 75, 75);
-    border-radius: 50%;
-    position: absolute;
+.heartIcon:active {
+    fill: red;
 }
-
-.heart::before {
-    top: -4vw;
-    left: 0;
-}
-
-.heart::after {
-    top: 0;
-    left: 4vw;
-}
-
-
 
 .title{
-    color: #FFF;
-    font-family: "Gmarket";
     font-size: 4vw;
     font-style: normal;
     font-weight: 500;
@@ -304,18 +138,16 @@ hr{
 }
 
 .content{
-    color: #FFF;
-    font-family: "Gmarket2";
     font-size: 4vw;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
     margin: 3vw;
+    height: 465px;
+    overflow-y: scroll;
 }
 .introduce_title{
     width: 90vw;
-    color: #FFF;
-    font-family: "Gmarket";
     font-size: 5vw;
     font-style: normal;
     font-weight: 500;
@@ -336,7 +168,6 @@ hr{
     align-items: center;
 }
 
-
 .star{
     position: absolute;
     margin-left: 10vw;
@@ -347,16 +178,23 @@ hr{
 .scroll{
     overflow-y: auto;
     height: 102vw;
+    width: 100%;
 }
 .moon{
     position: absolute;
     margin-top: 125vw;
-    /* margin-left: 10vw; */
 }
 
 .con{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
+.boothInfoBox {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    position: absolute;
+    top: 22px;
+}
