--- a/festival_hsu/templates/Booth_Info.html
+++ b/festival_hsu/templates/Booth_Info.html
@@ -1,100 +1,54 @@
-<!DOCTYPE html>
-
-<html lang="en">
+{% extends "baseDetail.html" %}
 {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block css %}
     <link rel="stylesheet" href="{% static "css/booth.css" %}" >
-    {% comment %} <link rel="stylesheet" href="{% static 'Booth_Info.css' %}"> {% endcomment %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <style>
-        @font-face {
-            font-family: "ulsanjunggu";
-            src: url("{% static "ttf/ulsanjunggu.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-        @font-face {
-            font-family: "Gmarket";
-            src: url("{% static "ttf/GmarketSansTTFMedium.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-        @font-face {
-            font-family: "Gmarket2";
-            src: url("{% static "ttf/GmarketSansTTFLight.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-    </style>
-    
-    <title>Booth_Info</title>
-</head>
+{% endblock css%}
 
-<body>
+{% block title %}
+BOOTH INFO
+{% endblock title %}
 
-    <div id="header" style = "z-index:-10000; width: 100% ; height : 100% ;position:absolute;">
-        <object type="text/html" data="{% static 'back.html' %}" style = "width: 100% ; height : 100% ;"></object>
-    </div>
-    
-    <div class="main">
-        
-        <div class="topbox">
-            <div class="동그라미">동그라미</div>
-            <div class="한서대대동제-outbox">
-                <div class="한서대대동제">한서대<br>대동제</div>
-            </div>
-            
-        </div>
-
-        <div class="midbox">
-            <hr>
-            <div class="boothinfo" id = "boothinfe">
-                BOOTH INFO
-            </div>
-            <hr>
-        </div>
-
-        <div class="map">
+{% block detail %}
+        <div class="map flex-justify-center">
             <!-- 지도사진들어가는곳> -->
-            <img  src="{% static "img/KakaoTalk_20230916_162421195.jpg" %}" class="hanseo_map" alt="hanseo_map" id = "dl">
+            <img  src="{% static "img/boothLoc.jpeg" %}" class="hanseo_map" alt="hanseo_map" id = "dl">
             {% for introduce in intruduce_list%}
-            {% comment %} <img src = "{% static "pngwing.com (1).png" %}" style = "margin-top:{{introduce.x}}vw ; width: 2vw; height: 2vw; " class = "move" value = "{{introduce.title}}" id = "move"> {% endcomment %}
-            {% comment %} onclick="goToScroll('{{introduce.title}}')" {% endcomment %}
-            <button id="myid" value = "{{introduce.title}}" class = "move" style = "margin-top:{{introduce.x}}vw ;margin-left:{{introduce.y}}vw ;"><img src = "{% static "img/pngwing.com (1).png" %}" style = "width: 2vw; height : 2vw; "></button>
+            <button id="myid" value = "booth{{introduce.id}}" class = "move" style = "margin-top:{{introduce.x}}vw ;margin-left:{{introduce.y}}vw ;"><img src = "{% static "img/pngwing.com (1).png" %}" style = "width: 2vw; height : 2vw; "></button>
             {% endfor %}
         </div>
         
-        <div class="bottombox">
+        <div class="boothContainer">
             <div class = "scroll" id = "scroll">
                 <div id = "target"></div>
                 
                 {% for post in intruduce_list %}
                 
-                <div class="booth_outbox"  id = "{{post.title}}">
-                    <div class="booth_image">
+                <div class="booth_outbox"  id = "booth{{post.id}}">
+                    <div class="booth_image flex-justify-center">
                         <img src="{% static "img/hanseo.png" %}" alt="Hanseo Logo" class="hanseo_img">
                     </div>
                     <div class="booth" >
                         <div class="heart_outbox">
-                            <div class="place">{{post.loc}}</div>
-                            {% comment %} <div class = "con">
-                                <p>{{post.likecount}}</p>
-                                <a class="heart"href="{{ post.like_url }}a/"></a>
-                            </div> {% endcomment %}
-                            <div class = "con">
-                                {% comment %} <button id="myid" value = "{{introduce.title}}" class = "move" ></button> {% endcomment %}
-                                <p id="count-{{ post.id }}" style="font:bold 1em; margin-top: 3px">
-                                    좋아요&nbsp;{{ post.likecount }}개</p>
-                                <button id = "Like" name="{{ post.id }}"  style="margin-top: 7px" value = "dd" class="heart">
+                            <div class="con">
+                                <p id="count-{{ post.id }}">
+                                    {{ post.likecount }}개
+                                </p>
+                                <button id = "Like" name="{{ post.id }}" class="heart">
+                                    <svg class="heartIcon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                                        <path class="heartIcon" d="m479.435-93.999-71.001-63.87Q305.173-250.565 237.76-318.26q-67.413-67.696-106.696-121.609-39.282-53.913-55.065-99.609Q60.216-585.174 60.216-634q0-102.453 68.504-171.118 68.503-68.666 170.715-68.666 51.396 0 97.85 19.739 46.454 19.739 82.15 56.913 35.695-37.174 82.15-56.913 46.454-19.739 97.85-19.739 102.694 0 171.521 68.666Q899.784-736.453 899.784-634q0 48.261-15.5 93.957-15.5 45.695-55.066 99.326-39.565 53.63-107.261 121.609-67.695 67.978-171.522 161.239l-71 63.87Zm0-142.48q94.869-86 156.021-146.087 61.153-60.086 96.305-104.739 35.152-44.652 48.587-78.822 13.434-34.17 13.434-67.859 0-57.753-38.307-95.775-38.307-38.021-95.768-38.021-45.011 0-83.881 26.5-38.869 26.5-53.869 67.5h-84.479q-14.732-41-54.018-67.5t-83.871-26.5q-56.917 0-94.861 38.021-37.945 38.022-37.945 95.761 0 34.297 13.683 69.084 13.684 34.787 48.87 79.373 35.186 44.586 95.773 104.391 60.587 59.804 154.326 144.673Zm1.13-265.651Z"/>
+                                        <path class="heartIcon" fill="rgba(255, 255, 255, 0.02)" d="m479.435-93.999-71.001-63.87Q305.173-250.565 237.76-318.26q-67.413-67.696-106.696-121.609-39.282-53.913-55.065-99.609Q60.216-585.174 60.216-634q0-102.479 68.37-171.131 68.37-68.653 170.849-68.653 51.435 0 97.869 19.739 46.435 19.739 82.131 56.913 35.695-37.174 82.13-56.913 46.435-19.739 97.87-19.739 102.478 0 171.414 68.653Q899.784-736.479 899.784-634q0 48.261-15.5 93.957-15.5 45.695-55.066 99.326-39.565 53.63-107.261 121.609-67.695 67.978-171.522 161.239l-71 63.87Z"/>
+                                    </svg>
+                                </button>
                                 
                             </div>
                             
                         </div>
-                        <div class="booth_name"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></div>
-                        <div class="introduce">{{ post.shortin }}</div>
+                        <div class="boothInfoBox">
+                            <div class="place Gmarket-Medium-White red">{{post.loc}}</div>
+                            <div class="booth_name"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></div>
+                            <div class="introduce">{{ post.shortin }}</div>
+                        </div>
                     </div>
                 </div>
             {% endfor %}              
@@ -103,43 +57,11 @@
             </div>
             
         </div>
-        {% comment %} {% for post in intruduce_list %}
-            <div>
-                <button id="myid" value = "{{introduce.title}}" class = "move" ></button>
-                <button id = "Like" name="{{ post.id }}"  style="margin-top: 7px" value = "dd">
-                <p id="count-{{ post.id }}" style="font:bold 1em; margin-top: 3px">
-                    좋아요&nbsp;{{ post.likecount }}개</p>
-            </div>
-        {% endfor%} {% endcomment %}
         
-    </div>
+{% endblock detail %}
+
+{% block script %}
     
     <script type="text/javascript" src="{% static "js/Booth_Info.js" %}"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-        $(document).on("click", "#Like", function () {
-            console.log("#"+ $(this).val())
-            var pk = $(this).attr('name')
-            console.log(pk)
-            $.ajax({ // ajax로 서버와 통신
-                type: "POST", // 데이터를 전송하는 방법
-                url: "{% url 'video_like' %}", // 통신할 url을 지정
-                data: { 'pk': pk ,'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션, pk를 넘겨야 어떤 video인지 알 수 있음
-                dataType: "json",
-                success: function (response) { // 성공
-                    
-                    $("#count-" + pk).html("좋아요&nbsp;" + response.likes_count + "개"); // 좋아요 개수 변경
-                },
-                error: function (request, status, error) { // 실패
-                    alert("로그인이 필요합니다.")
-                    console.log(url)
-                    console.log(data)
-                },
-            });
-        });
-    });
-    </script>
 
-
-</body>
-</html>
+{% endblock script %}
