--- a/festival_hsu/templates/Booth_info2.html
+++ b/festival_hsu/templates/Booth_info2.html
@@ -1,113 +1,47 @@
-<!DOCTYPE html>
-
-<html lang="en">
+{% extends "baseDetail.html" %}
 {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- {% comment %} <link rel="stylesheet" href="{% static "Booth_Info.css" %}" > {% endcomment %} -->
+
+{% block css %}
     <link rel="stylesheet" href="{% static "css/booth.css" %}" >
-    {% comment %} <link rel="stylesheet" href="{% static 'Booth_Info.css' %}"> {% endcomment %}
-    {% comment %} <link rel="stylesheet" href="/festival_hsu/thumbs_up/static/Booth_Info.css"> {% endcomment %}
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static "js/Booth_Info.js" %}"></script>
-    <style>
-        @font-face {
-            font-family: "ulsanjunggu";
-            src: url("{% static "ttf/ulsanjunggu.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-        @font-face {
-            font-family: "Gmarket";
-            src: url("{% static "ttf/GmarketSansTTFMedium.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-        @font-face {
-            font-family: "Gmarket2";
-            src: url("{% static "ttf/GmarketSansTTFLight.ttf" %}") format("truetype");
-            font-weight: normal;
-        }
-    </style>
-    <title>Booth_Info</title>
-</head>
+{% endblock css %}
 
-<body>
-    
-    <div id="header" style = "z-index:-10000; width: 100% ; height : 100% ;position:absolute;">
-        <object type="text/html" data="{% static 'back.html' %}" style = "width: 100% ; height : 100% ;"></object>
-    </div>
-    <div class="main">
+{% block title %}
+    BOOTH INFO
+{% endblock title %}
+
+{% block detail %}
+
+        <div class="boothContainer">
             
-        <div class="topbox">
-            <div class="동그라미">동그라미</div>
-            <div class="한서대대동제-outbox">
-                <div class="한서대대동제">한서대<br>대동제</div>
-            </div>
-        </div>
-
-        <div class="midbox">
-            <hr>
-            <div class="boothinfo">
-                BOOTH INFO
-            </div>
-            <hr>
-        </div>
-
-        <div class="bottombox">
-            
-            <div class="introduce_title">
+            <div class="introduce_title Gmarket-Medium-White">
                 <div>{{intruduce.title}}</div>
-                <div class = "con">
+                <div class = "con flex-justify-center">
                     {% comment %} <button id="myid" value = "{{introduce.title}}" class = "move" ></button> {% endcomment %}
-                    <p id="count-{{ intruduce.id }}" style="font:bold 1em; margin-top: 3px">
-                        좋아요&nbsp;{{ intruduce.likecount }}개</p>
-                    <button id = "Like" name="{{ intruduce.id }}"  style="margin-top: 7px" value = "dd" class="heart">
+                    <p id="count-{{ intruduce.id }}">
+                        {{ intruduce.likecount }}개
+                    </p>
+                    <button id = "Like" name="{{ intruduce.id }}" class="heart">
+                        <svg class="heartIcon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                            <path class="heartIcon" fill="white" d="m479.435-93.999-71.001-63.87Q305.173-250.565 237.76-318.26q-67.413-67.696-106.696-121.609-39.282-53.913-55.065-99.609Q60.216-585.174 60.216-634q0-102.453 68.504-171.118 68.503-68.666 170.715-68.666 51.396 0 97.85 19.739 46.454 19.739 82.15 56.913 35.695-37.174 82.15-56.913 46.454-19.739 97.85-19.739 102.694 0 171.521 68.666Q899.784-736.453 899.784-634q0 48.261-15.5 93.957-15.5 45.695-55.066 99.326-39.565 53.63-107.261 121.609-67.695 67.978-171.522 161.239l-71 63.87Zm0-142.48q94.869-86 156.021-146.087 61.153-60.086 96.305-104.739 35.152-44.652 48.587-78.822 13.434-34.17 13.434-67.859 0-57.753-38.307-95.775-38.307-38.021-95.768-38.021-45.011 0-83.881 26.5-38.869 26.5-53.869 67.5h-84.479q-14.732-41-54.018-67.5t-83.871-26.5q-56.917 0-94.861 38.021-37.945 38.022-37.945 95.761 0 34.297 13.683 69.084 13.684 34.787 48.87 79.373 35.186 44.586 95.773 104.391 60.587 59.804 154.326 144.673Zm1.13-265.651Z"/>
+                            <path class="heartIcon" fill="rgba(255, 255, 255, 0.02)" d="m479.435-93.999-71.001-63.87Q305.173-250.565 237.76-318.26q-67.413-67.696-106.696-121.609-39.282-53.913-55.065-99.609Q60.216-585.174 60.216-634q0-102.479 68.37-171.131 68.37-68.653 170.849-68.653 51.435 0 97.869 19.739 46.435 19.739 82.131 56.913 35.695-37.174 82.13-56.913 46.435-19.739 97.87-19.739 102.478 0 171.414 68.653Q899.784-736.479 899.784-634q0 48.261-15.5 93.957-15.5 45.695-55.066 99.326-39.565 53.63-107.261 121.609-67.695 67.978-171.522 161.239l-71 63.87Z"/>
+                        </svg>
+                    </button>
                     
                 </div>
             </div>
 
             <div class="intruduce_con">
-                <div class="title">👉 부스 소개</div>
-                <div class="content">{{ intruduce.intruduce }}</div>
+                <div class="title Gmarket-Medium-White">👉 부스 소개</div>
+                <div class="content Gmarket-Medium-White">
+                    {{ intruduce.intruduce }}</div>
             </div>
-
-            <div class="intruduce_con">
-                <div class="title">👉 메뉴</div>
-                {% for post in comments %}
-                    <div class="menu_content">
-                        <div class="content">{{post.name}}</div>
-                        <div class="content">{{post.price}}</div>
-                    </div>
-                {% endfor %}
-                
-            </div>
-
         </div>
     </div>
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-        $(document).on("click", "#Like", function () {
-            console.log("#"+ $(this).val())
-            var pk = $(this).attr('name')
-            console.log(pk)
-            $.ajax({ // ajax로 서버와 통신
-                type: "POST", // 데이터를 전송하는 방법
-                url: "{% url 'video_like' %}", // 통신할 url을 지정
-                data: { 'pk': pk ,'csrfmiddlewaretoken': '{{ csrf_token }}'}, // 서버로 데이터 전송시 옵션, pk를 넘겨야 어떤 video인지 알 수 있음
-                dataType: "json",
-                success: function (response) { // 성공
-                    
-                    $("#count-" + pk).html("좋아요&nbsp;" + response.likes_count + "개"); // 좋아요 개수 변경
-                },
-                error: function (request, status, error) { // 실패
-                    alert("로그인이 필요합니다.")
-                    console.log(url)
-                    console.log(data)
-                },
-            });
-        });
-    });
-    </script>
-</body>
-</html>
+{% endblock detail%}
+
+{% block script %}
+    <script type="text/javascript" src="{% static "js/Booth_Info.js" %}"></script>
+{% endblock script%}
