--- a/festival_hsu/templates/comments.html
+++ b/festival_hsu/templates/comments.html
@@ -1,65 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "baseDetail.html" %} 
 {% load static %}
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="{% static 'css/main2.css'%}" />
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-        <style>
-            @font-face {
-                font-family: "ulsanjunggu";
-                src: url("{% static "ttf/ulsanjunggu.ttf" %}") format("truetype");
-                font-weight: normal;
-            }
-            @font-face {
-                font-family: "Gmarket";
-                src: url("{% static "ttf/GmarketSansTTFMedium.ttf" %}") format("truetype");
-                font-weight: normal;
-            }
-            @font-face {
-                font-family: "Gmarket2";
-                src: url("{% static "ttf/GmarketSansTTFLight.ttf" %}") format("truetype");
-                font-weight: normal;
-            }
-            @font-face {
-                font-family: 'GmarketSansB';
-                src: url("{% static "ttf/GmarketSansTTFBold.ttf" %}") format("truetype");
-                font-weight: normal;
-            }
-        </style>
-        <title>한서대 대동제 방명록</title>
-    </head>
-    <body>
-        <div id="header" style = "z-index:-10000; width: 100% ; height : 100% ;position:absolute;">
-            <object type="text/html" data="{% static 'back.html' %}" style = "width: 100% ; height : 100% ;"></object>
-        </div>
-        <!-- COMMENT 타이틀 -->
-        <div class="titleContainer" class="gmarketSansB">
-            <div class="title flexSpaceBetween">
-                <div><hr /></div>
-                <div>
-                    <div class="circle">COMMENT</div>
-                </div>
-                <div><hr /></div>
-            </div>
-        </div>
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/comments.css'%}" />
+{% endblock css %}
+
+{% block title %}
+COMMENT
+{% endblock title %}
+
+{% block detail %}
+
+    <div class="commentsContainer">
 
         <!-- 방명록 -->
-        <div id="commentsContainer">
+        <div class="commentsWrap">
             {% for comment in comments %}
             <div class="commentBox">
                 <div class="info">
                     <div class="name">{{comment.nickname}}</div>
-                    <div class="date">{{comment.created|date:'Y.m.d H:i'}}</div>
+                    <div class="comment-date">{{comment.created|date:'Y.m.d H:i'}}</div>
                 </div>
                 <div class="comment">{{comment.comment}}</div>
             </div>
             {% endfor %}
         </div>
+    </div>
 
         <!-- 방명록 작성 -->
-        <div class="inputContainer gmarketSansB">
+        <div class="inputContainer Gmarket-Medium-White">
             <form class="flexSpaceBetween" action="{% url 'comments' %}" method="POST">
                 {% csrf_token %}
                 <input class="nameInput" type="text" name="nickname" placeholder="닉네임" required />
@@ -69,6 +38,7 @@
                 </div>
             </form>
         </div>
-        
-    </body>
-</html>
+
+    {% comment %} </div> {% endcomment %}
+
+{% endblock detail%}
