--- a/festival_hsu/static/css/main.css
+++ b/festival_hsu/static/css/main.css
@@ -171,15 +171,11 @@
         .card__image {
             width: 100%;
             height: 15em;
+            align-items: center
         }
     
         .card__image img {
-            width: 100%;
-            height: 50%;
             object-fit: cover;
-            position: absolute;
-            left: 0%;
-            top: 0%;
             border-radius: 2em 2em 0em 0em;
             margin-bottom: 2px;
         }
