fix : 아이폰 하단 주소창 설정

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, minimal-ui, viewport-fit=cover">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
         <title>한서대 대동제</title>
         {% block head %} {% endblock head %} 
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
