--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,8 +20,7 @@
 html,
 body {
     margin: 0;
-    height: 100%;
-    min-height: 100vh;
+    height: calc(var(--vh) * 100);
     width: 100%;
     overflow-x: hidden;
     position: relative;
