--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,7 +21,7 @@ html,
 body {
     margin: 0;
     height: 100vh;
-    width: 100%;
+    width: calc(var(--vh) * 100);
     overflow-x: hidden;
     position: relative;
     display: flex;
