--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,7 +201,8 @@ body {
 
 /* 푸터 */
 .footer {
-    top: 470%;
+    /* top: 470%; */
+    top: 510%;
     font-size: 12px;
     font-weight: 100;
     border-top: 0.5px solid white;
