--- a/templates/Booth_info2.html
+++ b/templates/Booth_info2.html
@@ -36,7 +36,10 @@
             <div class="intruduce_con">
                 <div class="title Gmarket-Medium-White">👉 부스 소개</div>
                 <div class="content Gmarket-Medium-White">
-                    {{ intruduce.intruduce }}</div>
+                    {{ intruduce.shortin }}
+                    <br><br>
+                    {{ intruduce.intruduce }}
+                </div>
             </div>
         </div>
     </div>
