fix : 메인 로고 <br> 추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,11 @@
 
 <div class="mainContainer">
     <!-- 메인 화면 -->
-    <div class="title Pyeong-Bold-White horizon-middle">동그라미</div>
+    <div class="title Pyeong-Bold-White horizon-middle">
+        동그
+        <br>
+        라미
+    </div>
     <div class="intro-wrap">
         <div class="date Gmarket-Medium-White">OCTOBER &nbsp <span class="red">5-6&nbsp;</span>, 2023</div>
         <div class="desc Gmarket-Medium-White horizon-middle">
