fix : introduce 컬럼 수정

--- a/templates/Booth_info2.html
+++ b/templates/Booth_info2.html
@@ -38,7 +38,7 @@
                 <div class="content Gmarket-Medium-White">
                     {{ intruduce.shortin }}
                     <br><br>
-                    {{ intruduce.intruduce | linebreakbr }}
+                    {{ intruduce.intruduce | linebreaksbr }}
                 </div>
             </div>
         </div>
