fix : main.html 방명록 내용 수정

--- a/templates/main.html
+++ b/templates/main.html
@@ -152,10 +152,10 @@
                 <div class="Comment_contain_outbox">
                     <div class="Comment_contain">
                         <div class="mainComment">
-                            축제 D-3
+                            한서대 대동재 10/5 ~ 10/6
                         </div>
                         <div class="_3minutes">
-                            3분전
+                            2023.10.04
                         </div>
                     </div>
                 </div>
